Update codes of Practical 7